--- a/stack.yaml
+++ b/stack.yaml
@@ -34,7 +34,13 @@ packages:
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 #
-# extra-deps:
+extra-deps:
+- happstack-server-7.6.0
+- network-bsd-2.8.1.0@sha256:d92423549794926f8bac0b63d5963c898a2ab628a4bb2e10ec5ce05b579383c1
+- network-3.1.1.1@sha256:b704cb6676c03e98267190df797497587576a2e96094550ea143415239bbe66e
+- hslogger-1.3.1.0
+- csv-0.1.2
+
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
